--- a/THANKS
+++ b/THANKS
@@ -1,4 +1,15 @@
 The authors would like to thank the following people for ideas, discussions,
 testing and feedback:
 
-Doris Altmann, Johannes Dreesman, Johannes Elias, Marcos Prates, Christopher W. Ryan, Klaus Stark, Yann Le Strat, André Michael Toschke, Achim Zeileis
+Doris Altmann
+Johannes Dreesman
+Johannes Elias
+Marc Geilhufe
+Mayeul Kauffmann
+Marcos Prates
+Barry Rowlingson
+Christopher W. Ryan
+Klaus Stark
+Yann Le Strat
+André Michael Toschke
+Achim Zeileis
